Added renovate setup
Signed-off-by: Willi Carlsen <carlsenwilli@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,11 @@
 {
   "nix": {
     "enabled": true
-  }
+  },
   "pre-commit": {
+    "enabled": true
+  },
+  "lockFileMaintenance": {
     "enabled": true
   }
 }
