Changed renovate from json to js
Signed-off-by: Willi Carlsen <carlsenwilli@gmail.com>

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -18,3 +18,4 @@ jobs:
           RENOVATE_INTERNAL_CHECKS_FILTER: none
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          configurationFile: renovate.js
