Trying new permissions
Signed-off-by: Willi Carlsen <carlsenwilli@gmail.com>

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -7,6 +7,12 @@ on:
 
 jobs:
   renovate:
+    permissions:
+      contents: read
+      issues: read
+      pull-requests: write
+      repository-projects: read
+      statuses: read
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
